plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "5.2.0"
}

group 'com.cbruegg'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation("io.vertx:vertx-web:3.8.3")
    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '1.3.9'
    implementation("com.squareup.moshi:moshi:1.9.2")
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

application {
    mainClassName = 'com.cbruegg.emuserver.Main'
}

task("runInWsl", type: Exec) {
    dependsOn(assemble)

    workingDir "C:\\Users\\mail\\IdeaProjects\\emuserver\\working-dir"
    commandLine "C:\\Users\\mail\\AppData\\Local\\Microsoft\\WindowsApps\\ubuntu.exe", "run", "/home/cbruegg/.sdkman/candidates/java/current/bin/java", "--enable-preview", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005", "-jar", "/mnt/c/Users/mail/IdeaProjects/emuserver/build/libs/emuserver-1.0-SNAPSHOT-all.jar"
}